<resources>
    <string name="app_name">CourseProject</string>
    <string name="or">или</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="toReg">Зарегистрироваться</string>
    <string name="toEnter">Войти</string>
    <string name="catalogue">Каталог</string>
    <string name="cart">Корзина</string>
    <string name="constructor">Конструктор</string>
    <string name="toExit">Выйти из аккаунта</string>
    <string name="settings">Настройки</string>
    <string name="addButton">"+"</string>
    <string name="deleteButton">-</string>
    <string name="emptyCart">Корзина пуста</string>
    <string name="cost">Общая стоимость: 0 рублей</string>
    <string name="addToCart">Добавить в корзину</string>
    <string name="ready">Готово</string>
    <string name="nameHint">Имя</string>
    <string name="surnameHint">Фамилия</string>
    <string name="adding">Добавление</string>
    <string name="author">Автор</string>
    <string name="program">О программе</string>
    <string name="aboutMe">Автор приложения - студент ИКБО-03-22 Климин Иван</string>
    <string name="aboutProgram">В этом приложении вы можете заказать себе парфюмерную продукцию, а также создать собственный аромат на основе 3 ингредиаентов</string>
    <string name="telephone">Телефон</string>
    <string name="adress">Адресс</string>
    <string name="toOrder">Оформить</string>
    <string-array name="spinner_items">
        <item>Выберите ингредиент</item>
        <item>Сандал</item>
        <item>Бергамот</item>
        <item>Черный перец</item>
        <item>Пачули</item>
        <item>Жасмин</item>
        <item>Табак</item>
        <item>Мята</item>
        <item>Мускус</item>
        <item>Кашмир</item>
        <item>Корица</item>
    </string-array>
    <string-array name="roles">
        <item>Пользователь</item>
        <item>Администратор</item>
    </string-array>
</resources>