<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.OrderActivity"
    android:background="@color/green">

    <EditText
        android:id="@+id/telephone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:hint="@string/telephone"
        app:layout_constraintEnd_toEndOf="@+id/edSurname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edSurname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="288dp"
        android:hint="@string/nameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="288dp"
        android:hint="@string/surnameHint"
        app:layout_constraintEnd_toStartOf="@+id/edSurname"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/adress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/adress"
        app:layout_constraintEnd_toEndOf="@+id/telephone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/telephone"
        app:layout_constraintTop_toBottomOf="@+id/telephone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#00370C">
        <TextView
            android:id="@+id/totalCostTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/make_an_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toOrder"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>