<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.InitialScreen"
    android:background="@color/green">
    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24" />
    <EditText
        android:id="@+id/edEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUser"
        app:layout_constraintWidth_percent=".8" />
    <EditText
        android:id="@+id/edPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmail"
        app:layout_constraintWidth_percent=".8" />
    <Button
        android:id="@+id/btnReg"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="96dp"
        android:onClick="onClickSignUp"
        android:text="@string/toReg"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/edPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edPass"
        app:layout_constraintTop_toBottomOf="@+id/edPass" />
    <Button
        android:id="@+id/btnEnter"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:onClick="onClickSignIn"
        android:text="@string/toEnter"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/btnReg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnReg"
        app:layout_constraintTop_toBottomOf="@+id/btnReg" />
    <Spinner
        android:id="@+id/spinRole"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:entries="@array/roles"
        app:layout_constraintEnd_toEndOf="@+id/edPass"
        app:layout_constraintStart_toStartOf="@+id/edPass"
        app:layout_constraintTop_toBottomOf="@+id/edPass" />
</androidx.constraintlayout.widget.ConstraintLayout>